--- a/sqlserver/docker-compose.yml
+++ b/sqlserver/docker-compose.yml
@@ -9,6 +9,7 @@ services:
         volumes: 
             - sqlserver
         environment: 
-            SA_PASSWORD: 1234
+            SA_PASSWORD: Ab123456!
+            ACCEPT_EULA: "Y"
 volumes: 
     sqlserver:
